examples/test/testpolicy9050.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9050
  namespace: namespace44
spec:
  podSelector:
    matchLabels:
      key41: value41
      key3: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value3
          key27: value44
          key47: value32
      podSelector:
        matchLabels:
          key10: value9
          key41: value0
